# sunminimart

./: .gitlab-ci.yml  Cargo.toml  Containerfile  README.md  compose.yaml  flake.nix
.devcontainer/: devcontainer.json  install.sh
.helix/: config.toml  languages.toml
.sqlx/: query-210faea4de67073cd5c8fceb44c8d0c318e8d4d612de18a20ac7ff52265cd4bc.json  query-21ba372802ffb71d0c920fc263f5f3b35b63455d9ce435dd328af62789e2f694.json  query-7106be1d4f65c37138fa3b63c4d0773819dddaae175eb4fa010a05bd84b8955c.json  query-874fa5307f1a5817ab63a12e160d60dedb75ff698e11e99c5f8c4a97461a7346.json  query-b3f7993bfad523d442902b97104955c0d035f9ffc01379a167c62566716ac367.json  query-d22af90527819d0adca5ba5df5742a7c546aabd3dcf5cb61e41b9a22cb3ea1ce.json  query-edc9225eed840129843f7aa2391abdf10c8a26f923361838f294bd2682694739.json
client/: Cargo.toml
client/asset/: setting.json
client/src/: custom.rs  custom_component.rs  custom_widget.rs  lib.rs  main.rs
client/src/screen/: home.rs  inventory.rs  mod.rs  setting.rs
migrations/: 20250511025317_schema.sql  20250611065506_base_schema.sql  20250611102427_logs.sql  20250614082934_item_detail.sql  20250614082942_ledger.sql
server/: Cargo.toml
server/src/: database.rs  lib.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs  backend.rs  inventory.rs  lib.rs  main.rs  server_function.rs
src/screen/: home.rs  inventory.rs
style/: main.scss
