[workspace]
members = [
    "client",
    "server",
    "shared"
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.37", features = ["macros", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
shared = { path = "./shared" }
