[package]
name = "client"
version = "0.1.0"
edition = "2024"
include = [
    "src/**/*",        # All files under src directory
    "asset/**/*",      # All files under asset directory
    "Cargo.toml",      # The manifest itself
]

[dependencies]
serde.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
shared.workspace = true
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [ "tokio" ] }
iced_aw = { version = "0.12.2", default-features = false, features = [ "date_picker" ] }
serde_json = "1.0.140"
reqwest = { version = "0.12.20", features = [ "json" ] }
